<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_disclaimer">This is only a malware scanner which compares files with previously found hashes. Not a magic wand that keeps your entire android super secure. You should be careful what you download/click!</string>
    <string name="app_copyright">Copyright 2017–2024 Divested Computing Group\nCopyleft 2025 MaintainTeam Organization</string>
    <string name="app_license">License: GPL-3.0</string>
    <string name="app_version">Version: %s</string>
    <string name="app_db_type_clamav">Powered by ClamAV style signatures</string>

    <string name="lblOnionRoutingToggle">Download over Tor</string>
    <string name="lblOnionRoutingEnabledHint">Downloading over Tor, this may take a while…</string>
    <string name="lblOnionRoutingNotInstalled">Orbot is not installed!</string>
    <string name="lblUpdateDatabase">Update databases</string>
    <string name="lblDatabaseServer">Database server override</string>
    <string name="lblFullCredits">Credits</string>
    <string name="lblScanSystem">Scan /system</string>
    <string name="lblScanApps">Scan App APKs</string>
    <string name="lblScanRemovable">Scan Removable Storage</string>
    <string name="lblScanExternal">Scan External Storage</string>
    <string name="lblNotificationMalwareDetectionTitle">Malware Detection</string>
    <string name="lblNotificationMalwareDetectionDescription">Used to alert when malware is detected</string>
    <string name="lblNotificationRealtimeTitle">Realtime Scanner</string>
    <string name="lblNotificationRealtimeDescription">Used to show files scanned counter and maintain the background service</string>
    <string name="lblNotificationRealtimeText">Known malware will be detected in realtime</string>
    <string name="lblNotificationRealtimeStopped">Hypatia: Realtime Scanning Stopped</string>
    <string name="lblNotificationRealtimeDetection">Malware Detected:</string>
    <string name="lblRealtimeScannerToggle">Realtime Scanner</string>
    <string name="lblReset">Reset</string>
    <string name="lblResetGitHub">GitHub mirror</string>
    <string name="lblOverride">Override</string>

    <string name="database_switcher_primary">Primary Server</string>
    <string name="database_switcher_mirror">GitHub Mirror</string>
    <string name="database_switcher_axp_os" translatable="false">AXP.OS</string>
    <string name="database_switcher_custom">Custom Server</string>
    <string name="main_database_new_source">Custom server set: %s</string>
    <string name="main_database_updating">Updating %s databases…</string>
    <string name="main_database_override">Using server %s</string>
    <string name="main_database_download_success">Successfully downloaded</string>
    <string name="main_database_download_error">File not downloaded, response code %s</string>
    <string name="main_database_validate_error">There was an error while validating the database, please double check the signing key and redownload</string>
    <string name="main_no_database_available">No database available, not scanning…</string>
    <string name="main_database_released_on">Released on %s</string>
    <string name="main_database_not_changed">File not changed</string>
    <string name="main_database_not_modified_since">since %s</string>
    <string name="main_database_download_error_logcat">Failed to download, check logcat</string>

    <string name="main_starting_scan">Starting scan…</string>
    <string name="main_cancelling_scan">Cancelling scan…</string>
    <string name="main_files_pending_scan">%s files pending scan</string>
    <string name="main_database_loading">Loading database…</string>
    <string name="main_database_loaded">Loaded database with %s signatures</string>
    <string name="main_hashing_files">Hashing files…</string>
    <string name="main_hashing_done">Calculated hashes for all files</string>
    <string name="main_hash_scan_done">Checked all %s hashes against signature databases</string>
    <string name="main_scanning_done">Scan completed in %1$s seconds @ %2$sMB/s!</string>
    <string name="main_files_scanned_count">%s files scanned</string>
    <string name="scan_control">Scan Control</string>
    <string name="lblScanRunning">Skipping action, a scan is running!</string>
    <string name="lblSigningKey">Database signing key</string>
    <string name="lblNoNetwork">No network connected!</string>
    <string name="self_test_result_success">Self test successful.</string>
    <string name="self_test_result_failure">Self test failed!</string>
    <string name="lblDatabaseLoading">Skipping action, database is loading!</string>
    <string name="lblDatabasesUpdated">All databases updated!</string>
    <string name="lookupVT">Lookup</string>
    <string name="deleteFile">Delete</string>
    <string name="deleted">Deleted!</string>
    <string name="ignoreDetection">Ignore</string>
    <string name="detections_none">No matches found :)</string>
    <string name="detections_found">Matches found! :(</string>
    <string name="confirm_lookup_title">Confirm lookup</string>
    <string name="confirm_lookup_summary">Are you sure you want to open VirusTotal.com in your web browser with the following hash?</string>
    <string name="confirm_delete_title">Confirm deletion</string>
    <string name="confirm_delete_summary">Are you sure you want to delete the following file?</string>
    <string name="delete_failed">Failed to delete!</string>
    <string name="ignored">Ignored!</string>
    <string name="uninstallApp">Uninstall</string>
    <string name="lblSelfTest">Write self test files</string>
    <string name="lblExtendedDatabaseToggle">Extended database</string>
    <string name="confirm_extended_title">Enable extended database?</string>
    <string name="confirm_extended_summary">[EXPERIMENTAL]\nThis will enable detection of an additional ~40 million signatures.\nThis requires a 200MB download, will slow down startup by over two minutes, will increase app RAM usage, and will increase the false positive rate.\nThis database only updates quarterly.</string>
    <string name="confirm_update_title">Confirm download</string>
    <string name="confirm_update_summary">You appear to be on a metered connection. Are you sure you want to update the databases?\nIt may download up to %s megabytes of data.</string>
    <string name="lblUpdateRunning">Skipping action, an update is running!</string>
    <string name="lblWroteTestFiles">Wrote test files!</string>
    <string name="accessibility_service_label">Hypatia Link Scanner</string>
    <string name="accessibility_service_description">Extracts domains from all screen text content and checks them against a blocklist</string>
    <string name="lblNotificationLinkDetection">Malicious Link Detected:</string>
    <string name="lblLinkScannerToggle">Link Scanner</string>
    <string name="confirm_link_scanner_title">Enable link scanner?</string>
    <string name="confirm_link_scanner_summary">[EXPERIMENTAL]\nThis will download an additional database of domains.\nAny domains found in screen content will be checked against the database.\nThis requires granting accessibility service permission manually.\nThis can have a substantial performance impact on screens with large amounts of text.</string>
    <string name="database_not_loaded_link_scanner">No database loaded. Please update databases to use the link scanner.</string>
    <string name="link_scanner_notification_text">Screen will be scanned and malicious links will be detected in realtime</string>
    <string name="link_scanner_notification_description">Used to show link scanning information.</string>
    <string name="cache_scan_result_deletion_warning">Since this was a share scan you should manually remove or quarantine the file!</string>
    <string name="see_notifications">Please see Notifications to manage the infected file.</string>
    <string name="lblActivityLog">Activity log</string>
    <string name="lblDetectedThreats">Detected threats (%d)</string>
    <string name="lblNoThreats">No threats detected in this scan.</string>
    <string name="lblScanningFile">Scanning: %s</string>
    <string name="lblFilesProgress">%1$d / %2$d files</string>
</resources>
